--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,4 +22,5 @@
 
 <div>
   <h1>Hello</h1>
+  <p>At some point I will put some stuff on this site. But for now, I'm still learning and thinking</p>
 </div>
