about section changes

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -22,4 +22,8 @@
 
 <div>
   <h1>About</h1>
+  <p>I am Matthew Ailes and I'm looking for work. I currently have a Bachelor of Arts
+    in Political Science from Virginia Commonwelath Univeristy and will soon be getting
+    my Bachelor of Science in Computer Science from Oregon State University. Hopefully
+    I will be doing this for a living one day.</p>
 </div>
