--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -13,6 +13,8 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
+        <li><a href="/portfolio">Portfolio</a></li>
+        <li><a href="/resume">Resume</a></li>
         <li><a href="/about">About</a></li>
         <li class="active"><a href="/contact">Contact</a></li>
       </ul>
