--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -21,3 +21,12 @@
     </div>
   </div>
 </nav>
+
+<div>
+  <h1><em>Education</em></h1>
+  <h2>Virginia Commonwealth University -- May 2013</h2>
+  <h3>Bachelor of Arts in Political Science</h3>
+  <br>
+  <h2>Oregon State Univeristy -- June 2016</h2>
+  <h3>Bachelor of Science in Computer Science</h3>
+</div>
