--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -23,7 +23,7 @@
 </nav>
 
 <div>
-  <h1><em>Education</em></h1>
+  <h1><strong>Education</strong></h1>
   <h2>Virginia Commonwealth University -- May 2013</h2>
   <h3>Bachelor of Arts in Political Science</h3>
   <br>
