--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -24,9 +24,9 @@
 
 <div>
   <h1><strong>Education</strong></h1>
-  <h2>Virginia Commonwealth University -- May 2013</h2>
-  <h3>Bachelor of Arts in Political Science</h3>
+  <h3>Virginia Commonwealth University -- May 2013</h3>
+  <p>Bachelor of Arts in Political Science</p>
   <br>
-  <h2>Oregon State Univeristy -- June 2016</h2>
-  <h3>Bachelor of Science in Computer Science</h3>
+  <h3>Oregon State Univeristy -- June 2016</h3>
+  <p>Bachelor of Science in Computer Science</p>
 </div>
