added the form. quick look at the basis

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -25,3 +25,26 @@
 <div>
   <h1>Contact</h1>
 </div>
+<div>
+  <form>
+    <fieldset>
+      <legend>Contact Me</legend>
+      <label>First Name:
+        <input type="text" name="fname"><br>
+      </label>
+      <label>Last Name:
+        <input type="text" name="lname"><br>
+      </label>
+      <label>E-Mail Address:
+        <input type="email" name="email"><br>
+      </label>
+      <label>Message:
+        <textarea name="message">
+          Your message to send me.
+        </textarea>
+      </label>
+      <input type="submit" value="Submit">
+      <input type="reset" value="Reset">
+    </fieldset>
+  </form>
+</div>
