fixed some formatting. still looks ugly though

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,26 +23,30 @@
 </nav>
 
 <div>
-  <h1>Contact</h1>
+  <h2>This doesn't work right now</h2>
 </div>
 <div>
   <form>
     <fieldset>
       <legend>Contact Me</legend>
       <label>First Name:
-        <input type="text" name="fname"><br>
+        <input type="text" name="fname">
       </label>
+      <br>
       <label>Last Name:
-        <input type="text" name="lname"><br>
+        <input type="text" name="lname">
       </label>
+      <br>
       <label>E-Mail Address:
-        <input type="email" name="email"><br>
+        <input type="email" name="email">
       </label>
+      <br>
       <label>Message:
         <textarea name="message">
           Your message to send me.
         </textarea>
       </label>
+      <br>
       <input type="submit" value="Submit">
       <input type="reset" value="Reset">
     </fieldset>
