--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -22,10 +22,7 @@
   </div>
 </nav>
 
-<div>
-  <h1>Contact</h1>
-</div>
-<div>
+<div class="container">
   <form>
     <fieldset>
       <legend>Contact Me</legend>
