--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -23,29 +23,39 @@
 </nav>
 
 <div class="container">
-  <form>
+  <form class="form-horizontal">
     <fieldset>
       <legend>Contact Me</legend>
-      <label>First Name:
-        <input type="text" name="fname">
-      </label>
-      <br>
-      <label>Last Name:
-        <input type="text" name="lname">
-      </label>
-      <br>
-      <label>E-Mail Address:
-        <input type="email" name="email">
-      </label>
-      <br>
-      <label>Message:
-        <textarea name="message">
-          Your message to send me.
-        </textarea>
-      </label>
-      <br>
-      <input type="submit" value="Submit">
-      <input type="reset" value="Reset">
+      <div class="form-group">
+        <label for="inFName" class="col-sm-2 control-label">First Name:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="inFName" placeholder="First Name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inLName" class="col-sm-2 control-label">Last Name:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="inLName" placeholder="Last Name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inEmail" class="col-sm-2 control-label">Email:</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="inEmail" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inText" class="col-sm-2 control-label">Message:</label>
+        <div class="col-sm-10">
+          <textarea class="form-control" rows="3" id="inMessage">Your message for me!</textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="reset" class="btn btn-default">Reset</button>
+        </div>
+      </div>
     </fieldset>
   </form>
 </div>
