--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -47,7 +47,7 @@
       <div class="form-group">
         <label for="inText" class="col-sm-2 control-label">Message:</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="inMessage">Your message for me!</textarea>
+          <textarea class="form-control" rows="3" id="inMessage" placeholder="Your Message for Me!></textarea>
         </div>
       </div>
       <div class="form-group">
