--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,18 +18,18 @@
 
   <body>
     <!-- header -->
-    <div class="header">
+    <div class="header container">
       <img src="/images/me.jpg" class="profile">
       <h2>Matthew Ailes -- Programmer for Hire</h2>
       <p>Stuff coming soon&trade;.</p>
     </div>
     <!-- starting point for handlebars -->
     {{{body}}}
-    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
   </body>
-    
+
 </html>
