--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -22,7 +22,7 @@
   </div>
 </nav>
 
-<div>
+<div class="container">
   <h1>About</h1>
   <p>I am Matthew Ailes and I'm looking for work. I currently have a Bachelor of Arts
     in Political Science from Virginia Commonwelath Univeristy and will soon be getting
