--- a/views/resume.handlebars
+++ b/views/resume.handlebars
@@ -22,7 +22,7 @@
   </div>
 </nav>
 
-<div>
+<div class="container">
   <h1><strong>Education</strong></h1>
   <h3>Virginia Commonwealth University -- May 2013</h3>
   <p>Bachelor of Arts in Political Science</p>
