my awesome kylo image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,3 +24,8 @@ a {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
 }
+
+.kylo {
+  border: 2px solid black;
+  border-radius: 50%;
+}
