--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -23,5 +23,5 @@
 </nav>
 
 <div class="container">
-  <img src="public/images/kylo_me.jpg" class="kylo img-responsive center-block" alt="Hipster Kylo Ren">
+  <img src="images/kylo_me.jpg" class="kylo img-responsive center-block" alt="Hipster Kylo Ren">
 </div>
