--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -24,4 +24,6 @@
 
 <div class="container">
   <img src="images/kylo_me.jpg" class="kylo img-responsive center-block" alt="Hipster Kylo Ren">
+  <hr>
+  <p>I am a huge nerd about many things.</p>
 </div>
