--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,10 @@
 
   <body>
     <!-- header -->
-    <div class="header container">
+    <div class="page-header container">
       <img src="/images/me.jpg" class="profile">
       <h2>Matthew Ailes -- Programmer for Hire</h2>
-      <p>Stuff coming soon&trade;.</p>
+      <small>Stuff coming soon&trade;.</small>
     </div>
     <!-- starting point for handlebars -->
     {{{body}}}
