hopefully this makes my header look pretty

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,16 @@
 
   <body>
     <!-- header -->
-    <div class="page-header container">
-      <img src="/images/me.jpg" class="profile">
-      <h2>Matthew Ailes -- Programmer for Hire</h2>
-      <small>Stuff coming soon&trade;.</small>
+    <div class="page-header">
+      <div class="media">
+        <div class="media-left">
+          <img src="/images/me.jpg" class="profile">
+        </div>
+        <div class="media-body">
+          <h2>Matthew Ailes -- Programmer for Hire</h2>
+          <small>Stuff coming soon&trade;.</small>
+        </div>
+      </div>
     </div>
     <!-- starting point for handlebars -->
     {{{body}}}
