--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 
   <body>
     <!-- header -->
-    <div class="page-header">
+    <div class="page-header container">
       <div class="media">
         <div class="media-left">
           <img src="/images/me.jpg" class="profile">
