--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,16 +8,13 @@ a {
 }
 
 .header {
-  height: 110px;
+  margin: auto;
 }
 
 .profile {
-  height: 100px;
-  width: 100px;
+  height: 125px;
   border: 2px solid black;
   border-radius: 50%;
-  float: left;
-  margin: 5px;
 }
 
 .nav {
