--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,11 +43,11 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {{{nav1}}}><a href="/">Home</a></li>
-            <li {{{nav2}}}><a href="/portfolio">Portfolio</a></li>
-            <li {{{nav3}}}><a href="/resume">Resume</a></li>
-            <li {{{nav4}}}><a href="/about">About</a></li>
-            <li {{{nav5}}}><a href="/contact">Contact</a></li>
+            <li{{{home}}}><a href="/">Home</a></li>
+            <li{{{portfolio}}}><a href="/portfolio">Portfolio</a></li>
+            <li{{{resume}}}><a href="/resume">Resume</a></li>
+            <li{{{about}}}><a href="/about">About</a></li>
+            <li{{{contact}}}><a href="/contact">Contact</a></li>
           </ul>
         </div>
       </div>
