--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,7 +54,11 @@
     </nav>
     <!-- starting point for handlebars -->
     {{{body}}}
-
+    <!-- footer, put some contact type stuff down here -->
+    <footer class="blog-footer">
+      <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> using <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://nodejs.org">Node.js</a>, <a href="http://handlebarsjs.com">handlebars</a>, and the MEAN stack.</p>
+      <p>All content is possibly copyrighted 2016&copy;</p>
+    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
