--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,21 @@
 <div class="container">
-  <h1>Hello</h1>
-  <p>At some point I will put some stuff on this site. But for now, I'm still learning and thinking</p>
+  <!-- start the blog template -->
+  <div class="blog-title">
+    <h2>Sample Blog Title</h2>
+    <p>January 01, 2016</p>
+  </div>
+  <div class="blog-body">
+    <p>At some point this website will be fully functional. Right now though, I'm just working on styling and back end stuff. Most everything is just a placeholder and doesn't work.</p>
+    <blockquote>I'm so confused, am I a normal person?
+      You know, I can't tell if I'm a normal person, it's true
+      I think I'm cool enough, but am I cruel enough?
+      Am I cruel enough, for you?
+      Girl break you down
+      Till everything is normal now, I know
+      And they will break down
+      Till everything is normal now, I know
+    </blockquote>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+  <hr>
 </div>
