change header to something maybe funny

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,16 @@
           <img src="/images/me.jpg" class="profile">
         </div>
         <div class="media-body">
-          <h2>Matthew Ailes -- Programmer for Hire</h2>
-          <small>Stuff coming soon&trade;.</small>
+          <code>void Matthew_Ailes(std::string education, std::vector skills, int experience) {
+            bool employed_in_dream_job = false;
+            while (!employed_in_dream_job) {
+              handOutResume(education, experience);
+              interviewForJob(skills);
+              if (landedJob) {
+                employed_in_dream_job = true;
+              }
+            }
+          }</code>
         </div>
       </div>
     </div>
