--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
           <img src="/images/me.jpg" class="profile">
         </div>
         <div class="media-body">
-          <code>void Matthew_Ailes(std::string education, std::vector skills, int experience) {
+          <pre class="prettyprint">void Matthew_Ailes(std::string education, std::vector skills, int experience) {
             bool employed_in_dream_job = false;
             while (!employed_in_dream_job) {
               handOutResume(education, experience);
@@ -33,7 +33,7 @@
                 employed_in_dream_job = true;
               }
             }
-          }</code>
+          }</pre>
         </div>
       </div>
     </div>
@@ -67,6 +67,8 @@
       <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> using <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://nodejs.org">Node.js</a>, <a href="http://handlebarsjs.com">handlebars</a>, and the MEAN stack.</p>
       <p>All content is possibly copyrighted 2016&copy;</p>
     </footer>
+    <!-- Google Code Prettyify) -->
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js&skin=desert"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
