that was stupid

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,16 +24,7 @@
           <img src="/images/me.jpg" class="profile">
         </div>
         <div class="media-body">
-          <pre class="prettyprint">void Matthew_Ailes(std::string education, std::vector skills, int experience) {
-            bool employed_in_dream_job = false;
-            while (!employed_in_dream_job) {
-              handOutResume(education, experience);
-              interviewForJob(skills);
-              if (landedJob) {
-                employed_in_dream_job = true;
-              }
-            }
-          }</pre>
+          <h2>Matthew Ailes -- Programmer for Hire</h2>
         </div>
       </div>
     </div>
