--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,10 @@ a {
 
 .header {
   margin: auto;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700;
+  background: url(images/headerbg.jpg);
+  border-radius: 25px;
 }
 
 .profile {
