--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,11 +20,13 @@
     <!-- header -->
     <div class="page-header container header">
       <div class="media">
-        <div class="media-left">
-          <img src="/images/me.jpg" class="profile">
+        <div class="media-left media-middle">
+          <img src="/images/me.jpg" class="profile media-object" alt="my face">
         </div>
         <div class="media-body">
-          <h2>Matthew Ailes -- Programmer for Hire</h2>
+          <h2 class="media-heading">Matthew Ailes</h2>
+          <h3 class="media-heading">Programmer for Hire</h3>
+          <p>A site for some ramblings, showing off code, and anything else I can think of.</p>
         </div>
       </div>
     </div>
