google pretty code

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
       <p>All content is possibly copyrighted 2016&copy;</p>
     </footer>
     <!-- Google Code Prettyify) -->
-    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js&skin=desert"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
