added requirements to form

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -5,25 +5,25 @@
       <div class="form-group">
         <label for="inFName" class="col-sm-2 control-label">First Name:</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="inFName" placeholder="First Name">
+          <input type="text" class="form-control" id="inFName" placeholder="First Name" required>
         </div>
       </div>
       <div class="form-group">
         <label for="inLName" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="inLName" placeholder="Last Name">
+          <input type="text" class="form-control" id="inLName" placeholder="Last Name" required>
         </div>
       </div>
       <div class="form-group">
         <label for="inEmail" class="col-sm-2 control-label">Email:</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inEmail" placeholder="Email">
+          <input type="email" class="form-control" id="inEmail" placeholder="Email" required>
         </div>
       </div>
       <div class="form-group">
         <label for="inText" class="col-sm-2 control-label">Message:</label>
         <div class="col-sm-10">
-          <textarea class="form-control" rows="3" id="inMessage" placeholder="Your Message for Me!"></textarea>
+          <textarea class="form-control" rows="3" id="inMessage" placeholder="Your Message for Me!" required></textarea>
         </div>
       </div>
       <div class="form-group">
