--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,14 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li{{{home}}}><a href="/">Home</a></li>
-            <li{{{portfolio}}}><a href="/portfolio">Portfolio</a></li>
+            <li class="dropdown{{{portfolio}}}">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/portfolio">My Portfolio</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="https://www.github.com/vidarc">My Github</a></li>
+              </ul>
+            </li>
             <li{{{resume}}}><a href="/resume">Resume</a></li>
             <li{{{about}}}><a href="/about">About</a></li>
             <li{{{contact}}}><a href="/contact">Contact</a></li>
