move some stuff around

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,3 +25,6 @@
   </div>
   <hr>
 </div>
+
+<!-- Google Code Prettyify) -->
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
