--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,14 @@
           <h3 class="media-heading">Programmer for Hire</h3>
           <p>A site for some ramblings, showing off code, and anything else I can think of.</p>
         </div>
+        <div class="media-left">
+          <a href=""><img src="/images/facebook.png" alt="facebook" class="social"></a>
+          <a href=""><img src="/images/github.png" alt="github" class="social"></a>
+          <a href=""><img src="/images/googleplus.png" alt="googleplus" class="social"></a>
+          <a href=""><img src="/images/lastfm.png" alt="last.fm" class="social"></a>
+          <a href=""><img src="/images/linkedin.png" alt="linkedin" class="social"></a>
+          <a href=""><img src="/images/twitter.png" alt="twitter" class="social"></a>
+        </div>
       </div>
     </div>
     <!-- navbar -->
@@ -65,6 +73,7 @@
     <!-- footer, put some contact type stuff down here -->
     <footer class="blog-footer">
       <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> using <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://nodejs.org">Node.js</a>, <a href="http://handlebarsjs.com">handlebars</a>, and the MEAN stack.</p>
+      <p>Social media icons are from <a href="https://www.iconfinder.com/iconsets/social-aquicons">Lanan Illustration</a>.</p>
       <p>All content is possibly copyrighted 2016&copy;</p>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
