finallized social media icons

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,14 +27,12 @@
           <h2 class="media-heading">Matthew Ailes</h2>
           <h3 class="media-heading">Programmer for Hire</h3>
           <p>A site for some ramblings, showing off code, and anything else I can think of.</p>
-        </div>
-        <div class="media-left">
-          <a href=""><img src="/images/facebook.png" alt="facebook" class="social"></a>
-          <a href=""><img src="/images/github.png" alt="github" class="social"></a>
-          <a href=""><img src="/images/googleplus.png" alt="googleplus" class="social"></a>
-          <a href=""><img src="/images/lastfm.png" alt="last.fm" class="social"></a>
-          <a href=""><img src="/images/linkedin.png" alt="linkedin" class="social"></a>
-          <a href=""><img src="/images/twitter.png" alt="twitter" class="social"></a>
+          <a href="https://twitter.com/mattailes"><img src="/images/twitter.png" alt="twitter" class="social"></a>
+          <a href="https://www.linkedin.com/in/mattailes"><img src="/images/linkedin.png" alt="linkedin" class="social"></a>
+          <a href="http://www.last.fm/user/vidarc"><img src="/images/lastfm.png" alt="last.fm" class="social"></a>
+          <a href="https://plus.google.com/104160854902939371173"><img src="/images/googleplus.png" alt="googleplus" class="social"></a>
+          <a href="https://github.com/vidarc"><img src="/images/github.png" alt="github" class="social"></a>
+          <a href="https://www.facebook.com/mattailes"><img src="/images/facebook.png" alt="facebook" class="social"></a>
         </div>
       </div>
     </div>
