--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,16 @@
 <div class="container">
+  <pre class="prettyprint"><code class="language-cpp">
+void MatthewAiles(std::string education, std::vector skills, int experience) {
+  bool dream_job = false;
+  while (!dream_job) {
+    handOutResumes(education, skills, experience);
+    interview();
+    if (hired) {
+      dream_job = true;
+    }
+  }
+}
+<div class="container">
   <!-- start the blog template -->
   <div class="blog-title">
     <h2>Sample Blog Title</h2>
@@ -17,11 +29,10 @@
     </blockquote>
     <p><a href="http://mattailes.net">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <pre class="prettyprint">
-      for (int i = 0; i < array.size(); i++) {
-        std::cout << "Hello";
-      }
-    </pre>
+    <h3>The greatest rap duo ever</h3>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/oNh2ndOeVFU" frameborder="0" allowfullscreen></iframe>
+    </div>
   </div>
   <hr>
 </div>
