finally finished my header i think

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,11 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matthew Ailes -- Programmer for Hire</title>
-
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro:400,700|Playfair+Display:400,700|Righteous' rel='stylesheet' type='text/css'>
     <!-- My stylesheet -->
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
@@ -24,9 +23,8 @@
           <img src="/images/me.jpg" class="profile media-object" alt="my face">
         </div>
         <div class="media-body">
-          <h2 class="media-heading">Matthew Ailes</h2>
-          <h3 class="media-heading">Programmer for Hire</h3>
-          <p>A site for some ramblings, showing off code, and anything else I can think of.</p>
+          <h3 class="media-heading stroke">MATTHEW AILES -- PROGRAMMER FOR HIRE</h3>
+          <h5 class="stroke">A site for some ramblings, showing off code, and anything else I can think of.</h5>
           <a href="https://twitter.com/mattailes" target="_blank"><img src="/images/twitter.png" alt="twitter" class="social"></a>
           <a href="https://www.linkedin.com/in/mattailes" target="_blank"><img src="/images/linkedin.png" alt="linkedin" class="social"></a>
           <a href="http://www.last.fm/user/vidarc" target="_blank"><img src="/images/lastfm.png" alt="last.fm" class="social"></a>
