--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,25 +18,57 @@ a {
 
 .header {
   margin: auto;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 700;
-  background: url(/images/headerbg.jpg);
+  font-family: 'Righteous', sans-serif;
   border-radius: 15px;
-  color: #eeba30;
-  text-shadow: black 0.1em 0.1em 0.2em;
+  color: #fafafa;
   padding-bottom: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.header:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.75;
+  background: url(/images/headerbg.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.stroke {
+  -webkit-text-stroke: 1px black;
+  color: white;
+  text-shadow: 3px 3px 0 #000,
+               -1px -1px 0 #000,
+               1px -1px 0 #000,
+               -1px 1px 0 #000,
+               1px 1px 0 #000;
 }
 
 .profile {
-  height: 125px;
+  height: 80px;
   margin: 5px 0px 0px 0px;
+  border: 2px solid #000000;
   border-radius: 50%;
+  z-index: 2;
 }
 
 .social {
   width: 28px;
   margin-right: 10px;
   float: right;
+  z-index: 2;
 }
 
 .nav {
