--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -70,7 +70,7 @@
     <footer class="blog-footer">
       <p>Built by <a href="email:mattailes@gmail.com">Matthew Ailes</a> using <a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://nodejs.org">Node.js</a>, <a href="http://handlebarsjs.com">handlebars</a>, and the MEAN stack.</p>
       <p>Social media icons are from <a href="https://www.iconfinder.com/iconsets/social-aquicons">Lanan Illustration</a>.</p>
-      <p>All content is possibly copyrighted 2016&copy;</p>
+      <p>All content is possibly copyrighted 2015 - {{year}} &copy;</p>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
