--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,6 +61,13 @@
             <li{{{about}}}><a href="/about">About</a></li>
             <li{{{contact}}}><a href="/contact">Contact</a></li>
           </ul>
+          <!-- Search form -->
+          <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search (but it doesn't work)">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
         </div>
       </div>
     </nav>
