--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,11 +63,16 @@
           </ul>
           <!-- Search form -->
           <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
+            <div class="form-group input-group">
               <input type="text" class="form-control" placeholder="Search (but it doesn't work)">
+              <span class="input-group-btn">
+                <button class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Go!</button>
+              </span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
           </form>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </div>
       </div>
     </nav>
