added a sidebar. changed some divs

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <img src="images/kylo_me.jpg" class="kylo img-responsive center-block" alt="Hipster Kylo Ren">
   <hr>
   <p>I am a huge nerd about many things.</p>
