--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <pre class="prettyprint"><code class="language-cpp">void MatthewAiles(std::string education, std::vector skills, int experience) {
   bool dream_job = false;
   while (!dream_job) {
@@ -11,7 +11,7 @@
 }</code></pre>
 </div>
 
-<div class="container">
+<div>
   <!-- start the blog template -->
   <div class="blog-title">
     <h2>Sample Blog Title</h2>
