I always forget something

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -86,8 +86,8 @@
         <div class="col-sm-3">
           <address>
             <strong>Matthew Ailes</strong><br>
-            103 S Boulevard #2
-            Richmond, VA 23220
+            103 S Boulevard #2<br>
+            Richmond, VA 23220<br>
           </address>
           <h3>Archives</h3>
           <ul>
