--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,23 +78,33 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-9">
           <!-- starting point for handlebars -->
           {{{body}}}
         </div>
         <!-- sidebar (address, archives, maybe ads?) -->
         <div class="col-sm-3">
-          <address>
-            <strong>Matthew Ailes</strong><br>
-            103 S Boulevard #2<br>
-            Richmond, VA 23220<br>
-          </address>
-          <h3>Archives</h3>
-          <ul>
-            <li>Test list</li>
-            <li>Just placeholders</li>
-            <li>Will change later</li>
-          </ul>
+          <div class="about">
+            <h4 class="text-center">About</h4>
+            <p class="text-justify">Just a guy looking to program for money. I also enjoy things such as playing guitar, watching soccer (COYS!), listening to music (I enjoy almost everything), and really anything nerd related. I hope you enjoy a look into my head. Enjoy your stay.</p>
+            <br>
+            <address>
+              <strong>Matthew Ailes</strong><br>
+              103 S Boulevard #2<br>
+              Richmond, VA 23220<br>
+            </address>
+          </div>
+          <div class="archives">
+            <h3>Archives</h3>
+            <ul>
+              <li>Test list</li>
+              <li>Just placeholders</li>
+              <li>Will change later</li>
+            </ul>
+          </div>
+          <div class="ads">
+            <p>ads maybe? (everyone likes extra cash)</p>
+          </div>
         </div>
       </div>
     </div>
