--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-sm-7">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oNh2ndOeVFU" frameborder="0" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oNh2ndOeVFU" allowfullscreen></iframe>
           </div>
         </div>
       </div>
