--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
     <!-- Google Fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro:400,700|Playfair+Display:400,700|Righteous' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700|Source+Code+Pro:400,700|Playfair+Display+SC:400,700|Righteous' rel='stylesheet' type='text/css'>
     <!-- My stylesheet -->
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
