placeholder stuff for portfolio page

--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -1,3 +1,101 @@
 <div>
-  <h2>Hello!</h2>
+  <h3 class="text-center">My Portfolio</h3>
+  <center>
+    <a href="#javascript"><span class="label label-info">JavaScript</span></a>
+    <a href="#nodejs"><span class="label label-info">Node.js</span></a>
+    <a href="#cpp"><span class="label label-info">C/C++</span></a>
+  </center>
+  <hr>
+  <h4 id="javascript">JavaScript</h4>
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <h4 id="nodejs">Node.js</h4>
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <h4 id="cpp">C/C++</h4>
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <img src="/images/placeholder.jpg" alt="placeholder">
+        <div class="caption">
+          <h4>Placeholder stuff</h4>
+          <p>VHS slow-carb locavore, mlkshk ad small batch fingerstache affogato chillwave butcher PBR&B humblebrag banjo nisi gochujang. Freegan heirloom fugiat everyday carry odio consectetur, skateboard nulla XOXO aliqua raw denim sint mlkshk put a bird on it.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
